# vox

./: .gitmodules  CMakeLists.txt  README.md
media/audio/Default/: thumbnail.tga
media/config/: mods.ini  options.ini  settings.ini
media/gamedata/equipment/AshBody/: AshBody.equipment
media/gamedata/equipment/AshBoots/: AshBoots.equipment
media/gamedata/equipment/AshGloves/: AshGloves.equipment
media/gamedata/equipment/AshHelm/: AshHelm.equipment
media/gamedata/equipment/AshPants/: AshPants.equipment
media/gamedata/equipment/AshShoulders/: AshShoulders.equipment
media/gamedata/equipment/BlacksmithGloves/: BlacksmithGloves.equipment
media/gamedata/equipment/BoneBody/: BoneBody.equipment
media/gamedata/equipment/BoneBoots/: BoneBoots.equipment
media/gamedata/equipment/BoneGloves/: BoneGloves.equipment
media/gamedata/equipment/BoneHelm/: BoneHelm.equipment
media/gamedata/equipment/BonePants/: BonePants.equipment
media/gamedata/equipment/BoneShoulders/: BoneShoulders.equipment
media/gamedata/equipment/IceBody/: IceBody.equipment
media/gamedata/equipment/IceBoots/: IceBoots.equipment
media/gamedata/equipment/IceGloves/: IceGloves.equipment
media/gamedata/equipment/IceHelm/: IceHelm.equipment
media/gamedata/equipment/IcePants/: IcePants.equipment
media/gamedata/equipment/IceShoulders/: IceShoulders.equipment
media/gamedata/equipment/IronBody/: IronBody.equipment
media/gamedata/equipment/IronBoots/: IronBoots.equipment
media/gamedata/equipment/IronGloves/: IronGloves.equipment
media/gamedata/equipment/IronHelm/: IronHelm.equipment
media/gamedata/equipment/IronPants/: IronPants.equipment
media/gamedata/equipment/IronShoulders/: IronShoulders.equipment
media/gamedata/items/Bomb/: Bomb.item  (+1 more)
media/gamedata/quests/: A_Simple_Collection.quest  A_Simple_Task.quest
saves/characters/Steve/: Steve.actionbar  Steve.character  Steve.faces  Steve.inv  Steve.stats
src/: CMakeLists.txt  VoxCamera.cpp  VoxControls.cpp  VoxGUI.cpp  VoxGame.cpp  VoxGame.h  VoxInput.cpp  VoxRender.cpp  VoxSettings.cpp  VoxSettings.h  VoxUpdate.cpp  VoxWindow.cpp  VoxWindow.h  main.cpp
src/Enemy/: CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  EnemySpawner.cpp  EnemySpawner.h
src/GameGUI/: ActionBar.cpp  ActionBar.h  CMakeLists.txt  CharacterGUI.cpp  CharacterGUI.h  CraftingGUI.cpp  CraftingGUI.h  HUD.cpp  HUD.h  InventoryGUI.cpp  InventoryGUI.h  LootGUI.cpp  LootGUI.h  QuestGUI.cpp  QuestGUI.h
src/Instance/: CMakeLists.txt  InstanceManager.cpp  InstanceManager.h
src/Inventory/: CMakeLists.txt  InventoryManager.cpp  InventoryManager.h
src/Items/: CMakeLists.txt  EquipmentEnum.h  EquipmentUtils.cpp  Item.cpp  Item.h  ItemManager.cpp  ItemManager.h  ItemSpawner.cpp  ItemSpawner.h  ItemUtils.cpp  ItemsEnum.h  RandomLootManager.cpp  RandomLootManager.h  StatAttribute.cpp  StatAttribute.h
src/Lighting/: CMakeLists.txt  DynamicLight.cpp  DynamicLight.h  LightingManager.cpp  LightingManager.h
src/Maths/: 3dGeometry.h  3dmaths.h  Bezier3.cpp  Bezier4.cpp  BoundingRegion.h  CMakeLists.txt  Line3D.cpp  Plane3D.cpp  matrix4x4.cpp
src/Mods/: CMakeLists.txt  ModsManager.cpp  ModsManager.h
src/NPC/: CMakeLists.txt  NPC.cpp  NPC.h  NPCManager.cpp  NPCManager.h
src/Particles/: BlockParticle.cpp  BlockParticle.h  BlockParticleEffect.cpp  BlockParticleEffect.h  BlockParticleEmitter.cpp  BlockParticleEmitter.h  BlockParticleManager.cpp  BlockParticleManager.h  CMakeLists.txt
src/Player/: CMakeLists.txt  Player.cpp  Player.h  PlayerClass.h  PlayerCombat.cpp  PlayerStats.cpp  PlayerStats.h
src/Projectile/: CMakeLists.txt  Projectile.cpp  Projectile.h  ProjectileManager.cpp  ProjectileManager.h
src/Quests/: CMakeLists.txt  Quest.cpp  Quest.h  QuestJournal.cpp  QuestJournal.h  QuestManager.cpp  QuestManager.h
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h  camera.h  colour.cpp  colour.h  frustum.cpp  frustum.h  glsl.cpp  light.h  material.h  tga.cpp
src/Skybox/: CMakeLists.txt  Skybox.cpp  Skybox.h
src/SoundManager/: CMakeLists.txt  SoundEffects.cpp  SoundEffectsEnum.h  SoundManager.cpp  SoundManager.h
src/TextEffects/: AnimatedText.cpp  AnimatedText.h  CMakeLists.txt  TextEffectsManager.cpp  TextEffectsManager.h
src/blocks/: BiomeManager.cpp  BiomeManager.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
src/freetype/: CMakeLists.txt  freetypefont.cpp
src/frontend/: CMakeLists.txt  FrontendManager.cpp  FrontendManager.h  FrontendPage.cpp  FrontendPage.h  FrontendScreens.h
src/frontend/Pages/: CreateCharacter.cpp  CreateCharacter.h  Credits.cpp  Credits.h  MainMenu.cpp  MainMenu.h  ModMenu.cpp  ModMenu.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h  QuitPopup.cpp  QuitPopup.h  SelectCharacter.cpp  SelectCharacter.h
src/gui/: CMakeLists.txt  TreeView.cpp  abstractbutton.cpp  abstractbutton.h  button.cpp  button.h  checkbox.cpp  checkbox.h  component.cpp  component.h  container.cpp  container.h  dimensions.cpp  dimensions.h  directdrawrectangle.cpp  directdrawrectangle.h  draggablerenderrectangle.cpp  draggablerenderrectangle.h  event.cpp  event.h  eventlistener.cpp  eventlistener.h  focusevent.cpp  focusevent.h  focuslistener.cpp  focuslistener.h  focusmanager.cpp  focusmanager.h  formattedlabel.cpp  formattedlabel.h  guiwindow.cpp  guiwindow.h  guiwindowclosebutton.cpp  guiwindowclosebutton.h  guiwindowminimizebutton.cpp  guiwindowminimizebutton.h  icon.cpp  icon.h  keyevent.cpp  keyevent.h  (+43 more)
src/lua/: CMakeLists.txt
src/models/: BoundingBox.cpp  CMakeLists.txt  MS3DAnimator.cpp  MS3DAnimator.h  MS3DModel.cpp  MS3DModel.h  OBJModel.h  QubicleBinary.cpp  QubicleBinary.h  VoxelCharacter.cpp  VoxelCharacter.h  VoxelObject.cpp  VoxelObject.h  VoxelWeapon.cpp  VoxelWeapon.h  objmodel.cpp
src/scenery/: CMakeLists.txt  SceneryManager.cpp  SceneryManager.h
src/selene/: CMakeLists.txt
src/simplex/: CMakeLists.txt
src/utils/: CMakeLists.txt  CountdownTimer.cpp  CountdownTimer.h  FileUtils.cpp  FileUtils.h  Interpolator.cpp  Interpolator.h  Random.h  TimeManager.cpp  TimeManager.h
(+108 files in other folders)
